gccida/g2/emit_store_flag
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4697:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4700:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4736:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4739:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v47; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4744:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4747:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v55; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4758:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v66; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4759:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v67; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4767:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode target_mode; // [rsp+24h] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4769:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code icode; // [rsp+28h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4770:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode icodea; // [rsp+28h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4774:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode compare_modea; // [rsp+30h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4852:78: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( v14 != ( ( ( unsigned int)target_flags & 0x2000000) == 0 ? 64 : 128) || mode_class_0[mode] != MODE_INT ) 
                                                                             ^~~~~~~~~~~~
                                                                             mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4889:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[icode].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4917:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v29 = insn_data_0[v24].genfun( v28, v19); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4917:30: error: called object type '<dependent type>' is not a function or function pointer
v29 = insn_data_0[v24].genfun( v28, v19); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4966:27: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !ix86_branch_cost || mode_class_0[v18] != MODE_INT || op1 != const_int_rtx[64] ) 
                          ^~~~~~~~~~~~
                          mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:4972:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v18] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/expmed.c:5045:33: error: invalid suffix 'xmode' on integer constant
v68 = convert_modes( *(short *)0xmode, mode, v12, 1); 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag/src/obj/expmed.o] Error 1
